[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "abc_exp_toolkit"
version = "0.0.2"
authors = [
 { name="Nadia Beliaikina", email="belyaikinan@gmail.com" },
]
description = "This is a library for summarizing the results of ab tests"
readme = "README.md"
requires-python = ">=3.09.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

dependencies = [
  "scipy>=1.9.0",
  "numpy>=1.23.0",
  "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/wellbel123/abc_exp_toolkit"

[tool.hatch.build.targets.wheel]
packages = ["src/abc_exp_toolkit"]